--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,7 +81,8 @@
             android:drawablePadding="6dp"
             android:padding="4dp"
             android:text="Forget Password"
-            android:textColor="?attr/textColor" />
+            android:textColor="?attr/textColor"
+            />
 
 
     </LinearLayout>
