--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -47,7 +47,8 @@
             android:textColor="?attr/textColor"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <Button
             android:id="@+id/btn_play"
