--- a/app/src/main/res/layout/alert_dialog_passforget.xml
+++ b/app/src/main/res/layout/alert_dialog_passforget.xml
@@ -1,67 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/RelativetLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundcolor"
     android:orientation="vertical"
     android:padding="20dp">
 
-    <TextView
-        android:id="@+id/tvDescriptForgot"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="36dp"
-        android:text="¿Has olvidado la contraseña?"
-        android:textColor="?textColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvDescriptForgot3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="72dp"
-        android:text="Ingresa tu correo para crear una nueva"
-        android:textColor="?textColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvDescriptForgot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="¿Has olvidado la contraseña?"
+            android:textAlignment="center"
+            android:textColor="?textColor"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            tools:laout_conversion_absoluteWidth="185dp"
+            tools:layout_conversion_absoluteHeor_absoluteX="20dp"
+            tools:layout_editight="19dp"
+            tools:layyout_editor_absoluteY="20dp" />
 
-    <EditText
-        android:id="@+id/et_insertemail"
-        android:layout_width="297dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_email_black_24dp"
-        android:drawablePadding="10dp"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:padding="15dp"
-        android:textColor="?textColor"
-        android:textColorHighlight="@color/icons"
-        android:textColorHint="?attr/colorAccent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvDescriptForgot3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Ingresa tu correo para crear una nueva"
+            android:textAlignment="center"
+            android:textColor="?textColor"
+            android:textSize="14dp"
+            tools:layout_conversion_absoluteHeor_absoluteX="92dp"
+            tools:layout_conversion_absoluteWidth="244dp"
+            tools:layout_editight="19dp"
+            tools:layout_editor_absoluteY="128dp" />
 
-    <Button
-        android:id="@+id/btn_pass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="236dp"
-        android:background="@drawable/shapesignup"
-        android:padding="15dp"
-        android:shadowColor="@android:color/transparent"
-        android:text="Enviar"
-        android:textColor="@color/icons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/et_titulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/shapealert"
+            android:drawableLeft="@drawable/ic_email_black_24dp"
+            android:drawablePadding="10dp"
+            android:hint="Email"
+            android:inputType="textPersonName"
+            android:maxLines="1"
+            android:padding="15dp"
+            android:textColor="?textColor"
+            android:textColorHighlight="@color/icons"
+            android:textColorHint="?attr/colorAccent"
+            tools:layout_conversion_absoluteHeight="56dp"
+            tools:layout_conversion_absoluteWidth="297dp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="283dp" />
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_volver_add"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shapealert"
+                android:layoutDirection="inherit"
+                android:padding="15dp"
+                android:shadowColor="@android:color/transparent"
+                android:text="Atrás"
+                android:textAlignment="center"
+                android:textColor="?attr/colorAccent"
+                tools:layout_conversion_absoluteHeight="118dp"
+                tools:layout_conversion_absoluteWidth="0dp"
+                tools:layout_editor_absoluteX="475dp"
+                tools:layout_editor_absoluteY="593dp" />
+
+            <Button
+                android:id="@+id/btn_pass"
+                android:layout_width="145dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/shapelogin"
+                android:padding="15dp"
+                android:shadowColor="?attr/textColor"
+                android:text="Enviar"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryLight"
+                tools:layout_conversion_absoluteHeight="49dp"
+                tools:layout_conversion_absoluteWidth="287dp"
+                tools:layout_editor_absoluteX="104dp"
+                tools:layout_editor_absoluteY="593dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
