--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -8,7 +8,7 @@
     tools:context=".BuscarFragment">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/RelativetLayout"
         android:layout_width="281dp"
         android:layout_height="52dp"
         android:layout_marginStart="64dp"
