--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -30,7 +30,8 @@
             android:layout_marginTop="16dp"
             android:text="TextView"
             android:textColor="?attr/textColor"
-            android:textSize="18sp"
+            android:textSize="23dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
