--- a/app/src/main/res/layout/alert_di_recy_borrar.xml
+++ b/app/src/main/res/layout/alert_di_recy_borrar.xml
@@ -56,6 +56,7 @@
         android:id="@+id/btn_borr_add"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="144dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/shapedelete"
@@ -65,6 +66,8 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryLight"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.812"
+        app:layout_constraintStart_toEndOf="@+id/btn_borr_volv"
         app:layout_constraintTop_toTopOf="parent" />
 
 
