--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,18 +7,18 @@
 
     <item
         android:id="@+id/creados"
-        android:icon="@drawable/principal"
+        android:icon="@drawable/ic_search_black_24dp"
 
-        android:title="Creados" />
+        android:title="Buscar" />
 
     <item
         android:id="@+id/asistencia"
-        android:icon="@drawable/saved"
-        android:title="Guardados" />
+        android:icon="@drawable/ic_add_location_black_24dp"
+        android:title="Añadir" />
     <item
         android:id="@+id/anadir"
-        android:icon="@drawable/created"
-        android:title="Guardados" />
+        android:icon="@drawable/ic_map_black_24dp"
+        android:title="Creados" />
 
 
 </menu>
