--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,17 +7,17 @@
 
     <item
         android:id="@+id/creados"
-        android:icon="@drawable/principal"
+        android:icon="@drawable/ic_search_black_24dp"
 
         android:title="Creados" />
 
     <item
         android:id="@+id/asistencia"
-        android:icon="@drawable/saved"
+        android:icon="@drawable/ic_add_location_black_24dp"
         android:title="Guardados" />
     <item
         android:id="@+id/anadir"
-        android:icon="@drawable/created"
+        android:icon="@drawable/ic_map_black_24dp"
         android:title="Guardados" />
 
 
