--- a/app/src/main/res/layout/alert_di_recy.xml
+++ b/app/src/main/res/layout/alert_di_recy.xml
@@ -42,7 +42,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="88dp"
             android:background="#0000A4D3"
-            android:text="Autor"
+            android:text="País"
             android:textColor="?attr/textColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
