--- a/app/src/main/res/layout/add_punto.xml
+++ b/app/src/main/res/layout/add_punto.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RelativetLayout"
@@ -10,120 +10,137 @@
     android:padding="20dp">
 
 
-    <LinearLayout
-        android:layout_width="375dp"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Insercción de punto"
+        android:textAlignment="center"
+        android:textColor="?textColor"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:laout_conversion_absoluteWidth="185dp"
+        tools:layout_conversion_absoluteHeor_absoluteX="20dp"
+        tools:layout_editight="19dp"
+        tools:layyout_editor_absoluteY="20dp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Insercción de punto"
-            android:textAlignment="center"
-            android:textColor="?textColor"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            tools:laout_conversion_absoluteWidth="185dp"
-            tools:layout_conversion_absoluteHeor_absoluteX="20dp"
-            tools:layout_editight="19dp"
-            tools:layyout_editor_absoluteY="20dp" />
+    <EditText
+        android:id="@+id/et_titulo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/shapealert"
+        android:hint="Nombre"
+        android:inputType="textPersonName"
+        android:maxLines="1"
+        android:padding="15dp"
+        android:textColor="?textColor"
+        android:textColorHighlight="@color/icons"
+        android:textColorHint="?attr/colorAccent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_conversion_absoluteHeight="56dp"
+        tools:layout_conversion_absoluteWidth="297dp" />
+
+    <TextView
+        android:id="@+id/tvGrabar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:text="¡Manten pulsado!"
+        android:textColor="?attr/textColor"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />
+
+    <Button
+        android:id="@+id/btn_grabacion"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/shapelogin"
+        android:drawableLeft="@drawable/ic_mic_black_24dp"
+        android:padding="15dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />
+
+    <Button
+        android:id="@+id/btn_volver_add"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/shapealert"
+        android:layoutDirection="inherit"
+        android:padding="15dp"
+        android:shadowColor="@android:color/transparent"
+        android:text="Volver"
+        android:textAlignment="center"
+        android:textColor="?attr/colorAccent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="118dp"
+        tools:layout_conversion_absoluteWidth="0dp" />
+
+    <Button
+        android:id="@+id/btn_ins_add"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/shapelogin"
+        android:padding="15dp"
+        android:shadowColor="?attr/textColor"
+        android:text="Insertar"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryLight"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/btn_grabacion"
+        tools:layout_conversion_absoluteHeight="49dp"
+        tools:layout_conversion_absoluteWidth="287dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.50" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="-1.050" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="1.025" />
 
 
-        <EditText
-            android:id="@+id/et_titulo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/shapealert"
-            android:drawablePadding="10dp"
-            android:hint="Nombre"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:padding="15dp"
-            android:textColor="?textColor"
-            android:textColorHighlight="@color/icons"
-            android:textColorHint="?attr/colorAccent"
-            tools:layout_conversion_absoluteHeight="56dp"
-            tools:layout_conversion_absoluteWidth="297dp"
-            tools:layout_editor_absoluteX="62dp"
-            tools:layout_editor_absoluteY="283dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvGrabar"
-                android:layout_width="199dp"
-                android:layout_height="wrap_content"
-                android:text="Manten pulsado para grabar"
-                android:textColor="?attr/textColor"
-                android:textSize="15dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/btn_grabacion"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="48dp"
-                android:background="@drawable/shapelogin"
-                android:drawableLeft="@drawable/ic_mic_black_24dp"
-                android:padding="15dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btn_volver_add"
-                android:layout_width="145dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shapealert"
-                android:layoutDirection="inherit"
-                android:padding="15dp"
-                android:shadowColor="@android:color/transparent"
-                android:text="Volver"
-                android:textAlignment="center"
-                android:textColor="?attr/colorAccent"
-                tools:layout_conversion_absoluteHeight="118dp"
-                tools:layout_conversion_absoluteWidth="0dp"
-                tools:layout_editor_absoluteX="475dp"
-                tools:layout_editor_absoluteY="593dp" />
-
-            <Button
-                android:id="@+id/btn_ins_add"
-                android:layout_width="145dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/shapelogin"
-                android:padding="15dp"
-                android:shadowColor="?attr/textColor"
-                android:text="Insertar"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryLight"
-                tools:layout_conversion_absoluteHeight="49dp"
-                tools:layout_conversion_absoluteWidth="287dp"
-                tools:layout_editor_absoluteX="104dp"
-                tools:layout_editor_absoluteY="593dp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
