--- a/app/src/main/res/layout/alert_di_recy_borrar.xml
+++ b/app/src/main/res/layout/alert_di_recy_borrar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RelativetLayout"
@@ -12,16 +12,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
-        android:layout_marginStart="72dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="¿Desea borrar el audio?"
         android:textAlignment="center"
         android:textColor="?attr/colorAccent"
         android:textSize="20dp"
         android:textStyle="bold"
-         />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -29,31 +31,37 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_clear_black_24dp"
-        android:foregroundGravity="center" />
+        android:foregroundGravity="center"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.36"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btn_borr_volv"
-        android:layout_width="171dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="115dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/shapealert"
         android:layoutDirection="inherit"
         android:shadowColor="@android:color/transparent"
         android:text="Volver"
         android:textAlignment="center"
         android:textColor="?attr/colorAccent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_borr_add"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="115dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/shapedelete"
         android:padding="15dp"
@@ -62,7 +70,16 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryLight"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.50" />
 
-</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
